<resources>
    <string name="app_name">Organise Workforce</string>
    <string name="google_auth_key_2">214615827571-9c1q17juv8rq6rolh9soqbp87rgomlks.apps.googleusercontent.com</string>
    <string name="google_auth_key_1">365340781141-fest0nqvvbr9o6b04h118smfjni4qvcb.apps.googleusercontent.com</string>

    <string name="user_data_login_to_signup">userData</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="age">Age</string>
    <string name="education">education</string>
    <string name="experience">Experience</string>
    <string name="Adhaar_number">Adhaar number</string>
    <string name="phone_number">Phone number</string>
    <string name="account_number">Account number</string>
    <string name="in_years">in Years</string>
    <string name="personal_details">Personal Details</string>
    <string name="preference">Preference</string>
    <string name="location">Location</string>
    <string name="job_profile">Job Profile</string>
    <string name="time">Time</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="expected_pay">Expected Pay</string>
    <string name="submit">Submit</string>
    <string name="company_name">Company name</string>
    <string name="tin_number">Tin Number</string>
    <string name="salary">Salary</string>
</resources>
