<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pri.android.organiseworkforce.SignUp">
    <View
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="128dp"/>
    <co.ceryle.radiorealbutton.library.RadioRealButtonGroup
        android:id="@+id/sign_up_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:rrbg_animateImages_enter="overshoot"
        app:rrbg_animateSelector="fastOutSlowIn"
        app:rrbg_animateTexts_enter="overshoot"
        app:rrbg_borderColor="@color/light_grey"
        app:rrbg_borderSize="1dp"
        app:rrbg_bottomLineSize="0dp"
        app:rrbg_dividerColor="@color/black"
        app:rrbg_dividerSize="1dp"
        app:rrbg_radius="10dp"
        app:rrbg_selectorColor="@color/red_700"
        app:rrbg_selectorRadius="4dp"
        app:rrbg_selectorSize="4dp"
        app:rrbg_shadow="true"
        app:rrbg_shadowElevation="3dp"
        app:rrbg_shadowMargin="3dp">

        <co.ceryle.radiorealbutton.library.RadioRealButton
            android:id="@+id/sign_up_worker_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_image="@drawable/worker"
            app:rrb_imageHeight="65dp"
            app:rrb_imageTop="true"
            app:rrb_imageWidth="65dp"
            app:rrb_ripple="true"
            app:rrb_rippleColor="@color/dark_grey"
            app:rrb_text="worker"
            app:rrb_textColor="@color/black" />

        <co.ceryle.radiorealbutton.library.RadioRealButton
            android:id="@+id/sign_up_company_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_image="@drawable/company"
            app:rrb_imageHeight="65dp"
            app:rrb_imageTop="true"
            app:rrb_imageWidth="65dp"
            app:rrb_ripple="true"
            app:rrb_rippleColor="@color/dark_grey"
            app:rrb_text="Company"
            app:rrb_textColor="@color/black" />
    </co.ceryle.radiorealbutton.library.RadioRealButtonGroup>

    <ScrollView
        android:layout_below="@id/empty_view"
        android:id="@+id/sign_up_scroll_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:nestedScrollingEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:overScrollMode="ifContentScrolls"
                android:id="@+id/sign_up_worker_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/personal_details"
                    android:textColor="@color/black"
                    android:typeface="serif" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/age" />

                    <EditText
                        android:id="@+id/sign_up_age"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/age"
                        android:inputType="number"
                        android:maxLines="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:text="@string/education" />

                    <Spinner
                        android:id="@+id/sign_up_education_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/experience" />

                    <Spinner
                        android:id="@+id/sign_up_experience_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/in_years"
                        android:maxLines="1"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Adhaar_number" />

                    <EditText
                        android:id="@+id/sign_up_adhaar_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/phone_number" />

                    <EditText
                        android:id="@+id/sign_up_phone_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/phone_number"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/account_number" />

                    <EditText
                        android:id="@+id/sign_up_account_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/account_number"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/preference"
                    android:textColor="@color/black"
                    android:typeface="serif" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="4dp"
                    android:background="@color/light_grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/location" />

                    <Spinner
                        android:id="@+id/sign_up_perf_location_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/job_profile" />

                    <Spinner
                        android:id="@+id/sign_up_job_profile_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18sp" />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/sign_up_work_time_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/time" />

                    <RadioButton
                        android:id="@+id/sign_up_work_time_day"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/day" />

                    <RadioButton
                        android:id="@+id/sign_up_work_time_night"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/night" />

                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/expected_pay" />

                    <Spinner
                        android:id="@+id/sign_up_expected_pay_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18sp" />
                </LinearLayout>

                <Button
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_background"
                    android:id="@+id/sign_up_worker_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:text="@string/submit" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sign_up_company_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/company_name" />

                    <EditText
                        android:id="@+id/sign_up_company_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/company_name"
                        android:maxLines="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tin_number" />

                    <EditText
                        android:id="@+id/sign_up_company_tin_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/tin_number"
                        android:inputType="number"
                        android:maxLines="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/phone_number" />

                    <EditText
                        android:id="@+id/sign_up_company_phone_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:maxLines="1" />
                </LinearLayout>

                <Button
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_background"
                    android:id="@+id/sign_up_company_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:text="@string/submit" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
